change deprecated newInstance (#3)